--- a/project00/project00.html
+++ b/project00/project00.html
@@ -3,9 +3,9 @@
 
 
 
-<h1 style="color:green"><b></b>რატომ უნდა შემოხვიდე Goal Orineted Academy-ში</h1>
+<h1 style="color:green" align="center"><b></b>რატომ უნდა შემოხვიდე Goal Orineted Academy-ში</h1>
 
-   <h4 style="color:green">Goa-ში შენ შეგიძლია ისწავლო კომპიუტერული ენები როგორიცაა:python,javascript,html და ა.შ</h4>
+   <h4 style="color:green">Goa-ში შენ შეგიძლია ისწავლო კომპიუტერული ენები როგორიცაა:python,javascript,php და ა.შ</h4>
 
 
 <h4 style="color:green"><b>Goa-ში არის კიდევ შეხვედრები და მას ეწოდება ჰაკათონი და Goaland ამ შეხვედრებზე თქვენ ერთმანეთს გაიცნობთ დამეგობრდებით და გაერთობით.</b></h4>
@@ -16,6 +16,14 @@
 
 <h2 style="color: red"><b>თუ გინდა რომ არ იყო ვირჯინი და იყო ჩადი ჩემოდი გოაში</b></h2>
 
+
+
+
+
+
+
+
+
 <button onclick="location.href='//www.youtube.com/channel/UCRjoMwrWoD8_KNioRwWlq8g'">თუ გაინტერესებს მეტი ინფორმაცია იმის თუ რატომ უნდა შემოხვიდე გოაში ეწვიე ჩვენს იუთუბს და არ დაგავიწყდეთ ზარის გააქთიურება</button>
 <button onclick="location.href='https://www.facebook.com/nika11keshelava/'">მეტი ინფორმაციისთვის გვეწვიეთ გოას facebook-ზე</button>
 
@@ -24,15 +32,29 @@
 
 
 
+<h2 style="color:rgb(251, 255, 0)" align="center"><b><i>ჩვენთან დაისახე დიადი მიზნები <br> <h4 align='center'>და</h4> <br> ერთად მივაღწიოთ მათ </i></b></h2>
 
 
 
+<img src="https://scontent.ftbs4-2.fna.fbcdn.net/v/t39.30808-6/441923619_442774765172491_5571838773878426948_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=AtGxY-gojLsQ7kNvgGIZPd3&_nc_ht=scontent.ftbs4-2.fna&oh=00_AYDp0WWpcqZLcQIyUnw8utVeSyfbcYHzDw8vOaofnntJrA&oe=66A013DE"
+
+
+     alt="example image"
+     width="800"
+     height="600" >
 
 
 
+   
+   
+   
+   
+   
+   
+   
+   
+    <style>
 
-
-   <style>
     body {
 
         
