--- a/project00/project00.html
+++ b/project00/project00.html
@@ -39,7 +39,7 @@
 <img src="https://scontent.ftbs4-2.fna.fbcdn.net/v/t39.30808-6/441923619_442774765172491_5571838773878426948_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=AtGxY-gojLsQ7kNvgGIZPd3&_nc_ht=scontent.ftbs4-2.fna&oh=00_AYDp0WWpcqZLcQIyUnw8utVeSyfbcYHzDw8vOaofnntJrA&oe=66A013DE"
 
 
-     alt="example image"
+     alt="TARGETS"
      width="800"
      height="600" >
 
